<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="14dp"
    android:paddingEnd="14dp"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    android:paddingTop="180dp"
    tools:context=".Login.SignUpActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chao_mung_ban"
        android:textSize="23sp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/dang_ky_tai_khoan"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="10dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhap_username"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="10dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhap_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="10dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhap_lai_password"
           />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dang_nhap"
        android:backgroundTint="@color/blue"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tro_ve"
        android:backgroundTint="@color/blue_grey"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

</LinearLayout>