<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingStart="14dp"
    android:paddingEnd="14dp"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    android:paddingTop="186dp"
    tools:context=".Login.SignInActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chao_mung_ban_da_tro_lai"
        android:textSize="19sp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vui_long_dang_nhap_de_tiep_tuc"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="25dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        app:counterEnabled="true"
        app:helperText="*Require"
        app:helperTextTextColor="#D41515">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhap_username"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        app:counterEnabled="true"
        app:helperText="*Require"
        app:helperTextTextColor="#D41515">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhap_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox
        android:id="@+id/chkLuu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ghi_nho_tai_khoan"
        android:textStyle="bold"
        android:layout_marginBottom="3dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:text="@string/dang_nhap"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_alignParentStart="true"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:text="@string/dang_ky"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/orange"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</LinearLayout>