<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="130dp"
    android:paddingEnd="10dp"
    tools:context=".Content.ManagementActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/quan_ly_nhan_su"
        android:textSize="31sp"
        android:textColor="@color/light_green"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/fpoly_software_company"
        android:textSize="20sp"
        android:textColor="@color/orange"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPhongBan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:background="@drawable/custom_btn"
            android:drawableTop="@drawable/baseline_maps_home_work_24"
            android:text="@string/phong_ban"
            android:textColor="@color/red"
            android:textSize="29sp"
            android:paddingTop="10dp"
            android:paddingStart="19dp"
            android:paddingEnd="19dp"
            android:paddingBottom="10dp"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNhanSu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/nhan_vien"
            android:background="@drawable/custom_btn"
            android:textSize="29sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:paddingTop="10dp"
            android:paddingStart="19dp"
            android:paddingEnd="19dp"
            android:paddingBottom="10dp"
            android:layout_alignParentEnd="true"
            android:drawableTop="@drawable/baseline_groups_24"/>
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnThoat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thoat"
        android:background="@drawable/custom_btn"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:paddingTop="10dp"
        android:paddingStart="19dp"
        android:paddingEnd="19dp"
        android:paddingBottom="10dp"
        android:textSize="29sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:drawableTop="@drawable/baseline_exit_to_app_24"/>
</LinearLayout>