<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvMaNV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/ma_nv_NV001"/>
    <TextView
        android:id="@+id/tvHoTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/ho_ten_nguyen_van_b"/>
    <TextView
        android:id="@+id/tvPhongBan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/phong_ban_hanh_chinh"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/imgSua"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_mode_edit_outline_24"/>
        <ImageView
            android:id="@+id/imgXoa"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/twotone_delete_24"/>
    </LinearLayout>
</LinearLayout>