<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="160dp"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fpoly_software_company"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="27sp"
        android:textColor="@color/red"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/round"
            android:layout_margin="4dp"
            android:src="@drawable/anh1"/>
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/round"
            android:layout_margin="4dp"
            android:src="@drawable/anh2"/>
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="4dp"
            android:background="@drawable/round"
            android:src="@drawable/anh3"/>
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:background="@drawable/round"
            android:src="@drawable/anh4"/>
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="4dp"
            android:background="@drawable/round"
            android:src="@drawable/anh5"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faculty_of_information_technology"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:text="@string/conect"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the"
            android:textStyle="bold"
            android:textSize="32sp"
            android:fontFamily="cursive"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:text="@string/future"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caodang.fpt.edu.vn"
        android:textAlignment="center"
        android:textSize="17sp"
        android:fontFamily="sans-serif-smallcaps"/>
</LinearLayout>